--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,7 +39,7 @@ file.reference.appdriver-agentfx.jar=../lib/appdriver-agentfx.jar
 file.reference.appdriver-base.jar=../lib/appdriver-base.jar
 file.reference.appdriver-constant.jar=../lib/appdriver-constant.jar
 file.reference.appdriver-iface.jar=../lib/appdriver-iface.jar
-file.reference.bcprov-jdk16-145.jar=../lib/bcprov-jdk16-145.jar
+file.reference.bcprov-jdk18on-175.jar=../lib/bcprov-jdk18on-175.jar
 file.reference.commons-beanutils-1.9.3.jar=../lib/commons-beanutils-1.9.3.jar
 file.reference.commons-codec-1.11.jar=../lib/commons-codec-1.11.jar
 file.reference.commons-compress-1.9.jar=../lib/commons-compress-1.9.jar
@@ -59,8 +59,8 @@ javac.classpath=\
     ${file.reference.appdriver-constant.jar}:\
     ${file.reference.appdriver-iface.jar}:\
     ${file.reference.mysql-connector-java-5.1.49.jar}:\
-    ${file.reference.bcprov-jdk16-145.jar}:\
     ${file.reference.commons-codec-1.11.jar}:\
+    ${file.reference.bcprov-jdk18on-175.jar}:\
     ${file.reference.commons-compress-1.9.jar}:\
     ${file.reference.commons-dbcp-1.2.2.jar}:\
     ${file.reference.commons-lang-2.1.jar}:\
